@@ -101,7 +101,7 @@
 
 GlobalStart
 Ambient: 1.2
-ProcessFile: process.txt
+ProcessFile: example_process.txt
 Font: crystal.ttf
 GlobalEnd
 
