@@ -11,7 +11,6 @@ This release
 - Detect text for boundary calculation
 - Text scaling with units needs fixing, especially the depth!
 - Documentation (source)
-- If datatype not specified, use layer definition for all datatypes
 - Debug/verbose output
 - Exception handling
 - Code coverage testing
@@ -19,7 +18,8 @@ This release
 - Compile examples and other files for distribution.
 - Proper command line option parsing
 
-Tasks: 14
+Tasks: 13
+
 
 Next release
 ============
